Run subsequent AffiliationBackends on the same sequence.

This ensures that in browser tests where the sync state is toggled off
and on in quick succession, the first AffiliationBackend instance will
have always closed the affiliation database before the second instance
tries to open it again.

Bug: 786157
Change-Id: I9dc724fc198c95de15ae6d877a298695162d80c3
Reviewed-on: https://chromium-review.googlesource.com/803494
Reviewed-by: Jan Wilken Dörrie <jdoerrie@chromium.org>
Commit-Queue: Balazs Engedy <engedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520998}
Former-commit-id: 944339838e32dc855fa228caadc7b05f143f4eb3